--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-native-fontawesome": "^0.2.7",
+    "date-fns": "^2.23.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-encrypted-storage": "^4.0.2",
