--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-native-fontawesome": "^0.2.7",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "date-fns": "^2.23.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-encrypted-storage": "^4.0.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
